--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -11,49 +11,37 @@
         <h1>MISR TRAVELS</h1>
         <p class="subtitle">Why Egypt's Dahab is the perfect Red Sea resort town? Let's see the most important sights in Dahab:</p>
     </div>
-    <div class="grid">
-        <div class="cell text">
-            <b>The Blue Hole:</b><br>
-            One of Dahab's most famous sites, the Blue Hole is considered the world's deadliest diving spot.
-        </div>
-        <div class="cell image">
-            <img src="bluehole.jpg" alt="Blue Hole">
-        </div>
-        <div class="cell text">
-            <b>Climbing destination:</b><br>
-            Rock climbing has become very popular in Dahab, and the hugely popular Wadi Qnai provides a number of single and multi-pitch routes.
-        </div>
-        <div class="cell image">
-            <img src="climbing.jpg" alt="Climbing">
-        </div>
-        <div class="cell text">
-            <b>Mountain with a hole:</b><br>
-            Positioned between Dahab and St. Catherine, Jebel Makhroum is one of the many desert attractions that makes hiking in Sinai so alluring.
-        </div>
-        <div class="cell image">
-            <img src="mountain.jpg" alt="Mountain with a hole">
-        </div>
-        <div class="cell text">
-            <b>Colorful promenade:</b><br>
-            The former fishing town is built around a boardwalk full of tour operators, handicraft shops, multicultural restaurants and cafes.
-        </div>
-        <div class="cell image">
-            <img src="promenade.jpg" alt="Promenade">
-        </div>
-        <div class="cell text">
-            <b>Desert camp:</b><br>
-            One of the most important activities in Dahab is enjoying nature and spending time camping with friends.
-        </div>
-        <div class="cell image">
-            <img src="camp.jpg" alt="Desert camp">
-        </div>
-        <div class="cell text">
-            <b>Trekking Sinai:</b><br>
-            Camel trekking around the unique landscape of St. Catherine, a town located just two hours away from Dahab, is another favored Sinai activity.
-        </div>
-        <div class="cell image">
-            <img src="trekking.jpg" alt="Trekking Sinai">
-        </div>
-    </div>
+    <table class="main-table">
+        <tr>
+            <td class="title"><b>The Blue Hole:</b></td>
+            <td class="text">One of Dahab's most famous sites, the Blue Hole is considered the world's deadliest diving spot.</td>
+            <td class="image"><img src="bluehole.jpg" alt="Blue Hole"></td>
+        </tr>
+        <tr>
+            <td class="title"><b>Climbing destination:</b></td>
+            <td class="text">Rock climbing has become very popular in Dahab, and the hugely popular Wadi Qnai provides a number of single and multi-pitch routes.</td>
+            <td class="image"><img src="climbing.jpg" alt="Climbing"></td>
+        </tr>
+        <tr>
+            <td class="title"><b>Mountain with a hole:</b></td>
+            <td class="text">Positioned between Dahab and St. Catherine, Jebel Makhroum is one of the many desert attractions that makes hiking in Sinai so alluring.</td>
+            <td class="image"><img src="mountain.jpg" alt="Mountain with a hole"></td>
+        </tr>
+        <tr>
+            <td class="title"><b>Colorful promenade:</b></td>
+            <td class="text">The former fishing town is built around a boardwalk full of tour operators, handicraft shops, multicultural restaurants and cafes.</td>
+            <td class="image"><img src="promenade.jpg" alt="Promenade"></td>
+        </tr>
+        <tr>
+            <td class="title"><b>Desert camp:</b></td>
+            <td class="text">One of the most important activities in Dahab is enjoying nature and spending time camping with friends.</td>
+            <td class="image"><img src="camp.jpg" alt="Desert camp"></td>
+        </tr>
+        <tr>
+            <td class="title"><b>Trekking Sinai:</b></td>
+            <td class="text">Camel trekking around the unique landscape of St. Catherine, a town located just two hours away from Dahab, is another favored Sinai activity.</td>
+            <td class="image"><img src="trekking.jpg" alt="Trekking Sinai"></td>
+        </tr>
+    </table>
 </body>
 </html> 
